# magnus

./: BITONIC_SORT_FIX_SUMMARY.md  CONSTANTS_REFACTORING_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  GPU_MEMORY_STRATEGY.md  LICENSE.md  METAL_ACCUMULATOR_ISSUES.md  METAL_IMPLEMENTATION.md  METAL_SPGEMM_IMPLEMENTATION_PLAN.md  NEEDED_ACCUMULATOR.md  OPTIMIZATION_SUMMARY.md  PARAMETER_SPACE_EXPLORATION.md  README.md  avx512_bitonic_sort.rs  bench.sh  feedback.md  requeested-accumulator.rs  rustfmt.toml  test_requested
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml  rust-ci.yml  rustdoc.yml
benches/: README.md  accelerate_vs_neon.rs  arm_optimization.rs  avx512_performance.rs  comparison_benchmark.rs  fused_operations_benchmark.rs  large_matrix_bench.rs  matrix_multiply.rs  neon_diagnosis.rs  neon_small_sizes.rs  optimization_test.rs  prefetch_benchmark.rs  quick_performance.rs  suitesparse.rs  tiered_benchmark.rs  tiered_benchmarks.rs  unified_benchmark.rs
data/: README.md
docs/: #implementation-gaps.md#  DIMENSIONAL_ANALYSIS_SUMMARY.md  additions_to_magnus.md  algorithm-notes.md  arm-hardware.md  avx512-implementation-plan.md  avx512-setup.md  benchmarking-guide.md  dependencies.md  development-journal.md  gcloud-avx512-setup.md  github-pages-setup.md  github-setup.md  implementation-gaps.md  master-document.md  roadmap.md  roadmap.md.bak  test-tier-summary.md  testing-strategy.md  unified-tier-system.md
docs/magnus-paper/: MagnusICS25_CameraReady.bbl  MagnusICS25_CameraReady.tex  acmart.cls  arXiv-2501.07056v2.tar  background.tex  conclusion.tex  intro.tex  magnus.tex  refs.bib  results.tex
examples/: avx512_demo.rs
scripts/: script-gcloud  setup-avx512-dev.sh
src/: api_safety.md  constants.rs  dimensional_analysis.rs  lib.rs  main.rs  parallel.rs  parameter_space.rs  reduced_parameter_space.rs  suitesparse_integration.rs  test_tiers.rs
src/accumulator/: accelerate.rs  adaptive_sort.rs  avx512.rs  avx512_bitonic.rs  bitonic_sort_types.rs  cpu_accumulate.rs  dense.rs  duplicate_prediction.rs  fused.rs  metal.rs  metal_impl.rs  metal_kernels.metal  metal_kernels_correct.metal  mod.rs  neon.rs  neon_safe.rs  simd.rs  sort.rs
src/matrix/: categorization.rs  config.rs  conversion.rs  csc.rs  csr.rs  mod.rs  reference.rs  spgemm_prefetch.rs
src/reordering/: coarse.rs  fine.rs  mod.rs
src/utils/: formats.rs  mod.rs  prefetch.rs
test_matrices/: web_matrix.mtx
tests/: accumulator.rs  architecture.rs  arm_integration.rs  arm_neon.rs  avx512_bitonic_tests.rs  avx512_tests.rs  categorization.rs  debug_bitonic.rs  format_conversions.rs  large_matrix.rs  large_matrix_quick.rs  magnus_spgemm.rs  matrix_basics.rs  metal_bitonic_sort.rs  metal_spgemm.rs  parallel_spgemm.rs  reference_validation.rs  reordering.rs  spgemm_correctness.rs  test_accumulator_debug.rs  test_bitonic_sort.rs  test_compare_implementations.rs  test_debug_accumulation.rs  test_exact_case.rs  test_metal_fix.rs  test_padding_issue.rs  test_sort_only.rs  test_threshold.rs  test_values_debug.rs
