[package]
name = "magnus"
version = "0.1.0"
edition = "2021"
description = "MAGNUS: Matrix Algebra for GPU and Multicore Systems - Sparse matrix multiplication algorithm"
authors = ["Eric <noreply@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/magnus"
readme = "README.md"

[dependencies]
# Core matrix libraries
sprs = "0.11"        # Sparse matrix representations
ndarray = "0.16"     # Dense array handling

# Parallelism
rayon = "1.8"        # Data-parallel operations

# Utilities
num-traits = "0.2"   # Generic numeric operations
aligned-vec = "0.6"  # Aligned memory allocation
num_cpus = "1.17"    # CPU core detection

[dev-dependencies]
criterion = "0.7"    # Benchmarking framework
proptest = "1.7"     # Property-based testing
rand = "0.8"         # Random number generation for benchmarks

[[bench]]
name = "matrix_multiply"
harness = false

[[bench]]
name = "suitesparse"
harness = false

[[bench]]
name = "arm_optimization"
harness = false

[[bench]]
name = "quick_performance"
harness = false

[[bench]]
name = "tiered_benchmarks"
harness = false

[[bench]]
name = "neon_diagnosis"
harness = false

[[bench]]
name = "neon_small_sizes"
harness = false
