[package]
name = "magnus"
version = "0.1.0"
edition = "2021"
description = "MAGNUS: Matrix Algebra for GPU and Multicore Systems - Sparse matrix multiplication algorithm"
authors = ["Eric <noreply@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/magnus"
readme = "README.md"

[dependencies]
# Core matrix libraries
sprs = "0.11"        # Sparse matrix representations
ndarray = "0.16"     # Dense array handling

# Parallelism
rayon = "1.8"        # Data-parallel operations

# Utilities
num-traits = "0.2"   # Generic numeric operations
aligned-vec = "0.6"  # Aligned memory allocation
num_cpus = "1.17"    # CPU core detection
rand = "0.8"         # Random number generation
rand_chacha = "0.3"  # Reproducible RNG

# Metal GPU support (Apple Silicon)
[target.'cfg(all(target_arch = "aarch64", target_os = "macos"))'.dependencies]
metal = "0.27"       # Metal API bindings
objc = "0.2"         # Objective-C runtime

[dev-dependencies]
criterion = "0.7"    # Benchmarking framework
proptest = "1.7"     # Property-based testing
tempfile = "3.8"     # Temporary files for testing

[[bench]]
name = "matrix_multiply"
harness = false

[[bench]]
name = "suitesparse"
harness = false

[[bench]]
name = "arm_optimization"
harness = false

[[bench]]
name = "quick_performance"
harness = false


[[bench]]
name = "neon_diagnosis"
harness = false

[[bench]]
name = "neon_small_sizes"
harness = false

[[bench]]
name = "optimization_test"
harness = false

[[bench]]
name = "accelerate_vs_neon"
harness = false

[[bench]]
name = "prefetch_benchmark"
harness = false

[[bench]]
name = "comparison_benchmark"
harness = false

[[bench]]
name = "large_matrix_bench"
harness = false

[[bench]]
name = "tiered_benchmark"
harness = false

[[bench]]
name = "unified_benchmark"
harness = false

[[bin]]
name = "explore_parameters"
path = "src/bin/explore_parameters.rs"

[[bin]]
name = "explore_dimensions"
path = "src/bin/explore_dimensions.rs"
